Add support for mobile

--- a/src/app/blog-card/blog-card.component.html
+++ b/src/app/blog-card/blog-card.component.html
@@ -1,4 +1,4 @@
-<div class="ui grid">
+<div class="ui mobile reversed stackable grid">
     <div class="eleven wide column">
         <h3 class="ui header">傲世丹神</h3>
         <p>天空中乌云密布，时不时会冒出一道闪电，伴随着一声声闷雷，一场大雨即将来临。卧虎城中，沈翔仰头看着天空，喃喃说道：“不能再拖了，我要快点找到好的灵药，否则我难以有翻身的机会。”...</p>
