--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="ui container custom-padding-tb">
-    <div class="ui grid">
+    <div class="ui grid stackable">
         <div class="eleven wide column">
             <div class="ui segment attached top">
                 <div class="ui two column grid">
@@ -70,7 +70,7 @@
             </div>
             <!-- Most Viewed Post -->
             <div class="ui segments">
-                <div class="ui sencondary segment">
+                <div class="ui sencondary segment teal">
                         <i class="thumbs up icon"></i>Most Viewed Post
                 </div>
                 <div class="ui segment">
