--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="ui inverted segment attached">
+<nav class="ui inverted segment attached custom-padding-tb">
     <div class="ui container"> 
-        <div class="ui inverted menu secondary custom-padding-tb">
+        <div class="ui inverted menu secondary stackable menu">
             <h2 class="ui header teal item">Victor's Blog</h2>
             <a class="item" routerLink="/home"><i class="home icon"></i>Home</a>
             <a class="item" routerLink="/"><i class="code icon"></i>Algorithm</a>
