Add dropdown list

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,6 +11,19 @@
                     <input type="text" placeholder="Search">
                     <i class="search link icon"></i>
                 </div>
+                <div class="ui compact menu inverted">
+                    <div class="ui dropdown item">
+                        <div class="text">
+                            <img src="" alt="" class="ui avatar image">
+                            Victor
+                        </div>
+                        <i class="dropdown icon"></i>
+                        <div class="menu">
+                            <a routerLink="admin" class="item">Admin</a>
+                            <a href="#" class="item">Logout</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
