--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
 <br>
 <br>
 <app-footer></app-footer>
